﻿Feature: Add many of the A records to the same IP address.