@@ -16,8 +16,10 @@ spec:
       version: v3
       valueFiles: {{ .Values.apps.officialWeb.valueFiles }}
       parameters: 
-        - name: cloudSQL.userPassword
-          value: {{ .Values.apps.backstage.sqlPassword }}
+        - name: ingress.redirect.srcFQDN
+          value: {{ .Values.apps.officialWeb.redirect.srcFQDN }}
+        - name: ingress.redirect.destFQDN
+          value: {{ .Values.apps.officialWeb.redirect.destFQDN }}
   destination:
     server: https://kubernetes.default.svc
     namespace: official-web
